fixed a log issue, changed links, changed scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,23 @@ img {
   margin-bottom: 7px;
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--bg);
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
 /*=============== REUSABLE CSS CLASSES ===============*/
 .section {
   padding: 6rem 0 2rem;
