--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,10 +1,12 @@
 .footer {
+  width: 100%;
+  height: 210px;
   background-color: var(--container-color);
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .footer__container {
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .footer__title,
@@ -50,7 +52,7 @@
 
 .footer__copy {
   display: block;
-  margin-top: 2.5rem;
+  margin-top: 1rem;
   color: var(--title-color);
   text-align: center;
   font-size: var(--smaller-font-size);
